did more eda, trying out accuracy measures

--- a/dataset-eda.ipynb
+++ b/dataset-eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f88426fb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0c011dd9",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The path '../../data/100k labels' exists.\n",
       "Entering folder: ../../data/100k labels/test\n",
       "Entering folder: ../../data/100k labels/train\n",
       "Entering folder: ../../data/100k labels/val\n",
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "2d09db65",
    "metadata": {},
    "outputs": [
@@ -78,7 +77,7 @@
        "300000"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "358d6452",
    "metadata": {},
    "outputs": [
@@ -470,7 +469,7 @@
        "     [121.032143, 563.984827, 'L']]}]}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,23 +480,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "8be55791",
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = set()\n",
+    "categories = {}\n",
     "for i, row in df.iterrows():\n",
     "    content = row\n",
     "    objects = content['frames'][0]['objects']\n",
     "    for object in objects:\n",
-    "        categories.add(object['category'])\n",
+    "        categories[object['category']] = 1 + categories.get(object['category'], 0)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "58be5e28",
    "metadata": {},
    "outputs": [
@@ -505,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'person', 'bus', 'traffic sign', 'lane/double white', 'area/unknown', 'bike', 'traffic light', 'lane/double yellow', 'lane/single white', 'lane/crosswalk', 'lane/road curb', 'train', 'truck', 'lane/single other', 'lane/double other', 'car', 'motor', 'area/drivable', 'lane/single yellow', 'area/alternative', 'rider'}\n"
+      "{'traffic sign': 343882, 'traffic light': 266032, 'car': 1021811, 'area/drivable': 91625, 'lane/single white': 353334, 'lane/crosswalk': 154228, 'lane/road curb': 157406, 'person': 129350, 'area/alternative': 88379, 'truck': 42963, 'bus': 16502, 'lane/single other': 394, 'rider': 6465, 'bike': 10232, 'lane/double yellow': 53449, 'lane/double white': 8206, 'lane/single yellow': 28962, 'motor': 4295, 'train': 179, 'lane/double other': 37, 'area/unknown': 2}\n"
      ]
     }
    ],
