--- a/yolo-training-testing.ipynb
+++ b/yolo-training-testing.ipynb
@@ -2,22 +2,292 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "765013cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "import json\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9ad07cdc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
-      "View Ultralytics Settings with 'yolo settings' or at '/Users/beaulin/Library/Application Support/Ultralytics/settings.json'\n",
-      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
+      "\n",
+      "image 1/1 /Users/beaulin/DS 340 Project/Analysis/road_object_detec/detecton_box_test/0a0a0b1a-7c39d841.jpg: 384x640 2 cars, 3 trucks, 58.5ms\n",
+      "Speed: 1.3ms preprocess, 58.5ms inference, 0.9ms postprocess per image at shape (1, 3, 384, 640)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[ultralytics.engine.results.Results object with attributes:\n",
+       " \n",
+       " boxes: ultralytics.engine.results.Boxes object\n",
+       " keypoints: None\n",
+       " masks: None\n",
+       " names: {0: 'person', 1: 'bicycle', 2: 'car', 3: 'motorcycle', 4: 'airplane', 5: 'bus', 6: 'train', 7: 'truck', 8: 'boat', 9: 'traffic light', 10: 'fire hydrant', 11: 'stop sign', 12: 'parking meter', 13: 'bench', 14: 'bird', 15: 'cat', 16: 'dog', 17: 'horse', 18: 'sheep', 19: 'cow', 20: 'elephant', 21: 'bear', 22: 'zebra', 23: 'giraffe', 24: 'backpack', 25: 'umbrella', 26: 'handbag', 27: 'tie', 28: 'suitcase', 29: 'frisbee', 30: 'skis', 31: 'snowboard', 32: 'sports ball', 33: 'kite', 34: 'baseball bat', 35: 'baseball glove', 36: 'skateboard', 37: 'surfboard', 38: 'tennis racket', 39: 'bottle', 40: 'wine glass', 41: 'cup', 42: 'fork', 43: 'knife', 44: 'spoon', 45: 'bowl', 46: 'banana', 47: 'apple', 48: 'sandwich', 49: 'orange', 50: 'broccoli', 51: 'carrot', 52: 'hot dog', 53: 'pizza', 54: 'donut', 55: 'cake', 56: 'chair', 57: 'couch', 58: 'potted plant', 59: 'bed', 60: 'dining table', 61: 'toilet', 62: 'tv', 63: 'laptop', 64: 'mouse', 65: 'remote', 66: 'keyboard', 67: 'cell phone', 68: 'microwave', 69: 'oven', 70: 'toaster', 71: 'sink', 72: 'refrigerator', 73: 'book', 74: 'clock', 75: 'vase', 76: 'scissors', 77: 'teddy bear', 78: 'hair drier', 79: 'toothbrush'}\n",
+       " obb: None\n",
+       " orig_img: array([[[199, 133,  55],\n",
+       "         [199, 133,  55],\n",
+       "         [199, 133,  55],\n",
+       "         ...,\n",
+       "         [238, 178,  96],\n",
+       "         [237, 177,  95],\n",
+       "         [237, 177,  95]],\n",
+       " \n",
+       "        [[199, 133,  55],\n",
+       "         [199, 133,  55],\n",
+       "         [199, 133,  55],\n",
+       "         ...,\n",
+       "         [238, 178,  96],\n",
+       "         [237, 177,  95],\n",
+       "         [237, 177,  95]],\n",
+       " \n",
+       "        [[200, 134,  56],\n",
+       "         [200, 134,  56],\n",
+       "         [200, 134,  56],\n",
+       "         ...,\n",
+       "         [238, 178,  96],\n",
+       "         [237, 177,  95],\n",
+       "         [237, 177,  95]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[ 46,  34,  10],\n",
+       "         [ 46,  34,  10],\n",
+       "         [ 46,  34,  10],\n",
+       "         ...,\n",
+       "         [ 18,  14,   3],\n",
+       "         [ 18,  14,   3],\n",
+       "         [ 18,  14,   3]],\n",
+       " \n",
+       "        [[ 43,  31,   7],\n",
+       "         [ 43,  31,   7],\n",
+       "         [ 43,  31,   7],\n",
+       "         ...,\n",
+       "         [ 19,  15,   4],\n",
+       "         [ 19,  15,   4],\n",
+       "         [ 19,  15,   4]],\n",
+       " \n",
+       "        [[ 44,  32,   8],\n",
+       "         [ 44,  32,   8],\n",
+       "         [ 44,  32,   8],\n",
+       "         ...,\n",
+       "         [ 19,  15,   4],\n",
+       "         [ 19,  15,   4],\n",
+       "         [ 19,  15,   4]]], shape=(720, 1280, 3), dtype=uint8)\n",
+       " orig_shape: (720, 1280)\n",
+       " path: '/Users/beaulin/DS 340 Project/Analysis/road_object_detec/detecton_box_test/0a0a0b1a-7c39d841.jpg'\n",
+       " probs: None\n",
+       " save_dir: '/Users/beaulin/DS 340 Project/Analysis/road_object_detec/runs/detect/predict'\n",
+       " speed: {'preprocess': 1.2583330099005252, 'inference': 58.47012498998083, 'postprocess': 0.8509589824825525}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = YOLO('yolo11s.pt')\n",
+    "\n",
+    "results = model(\"detecton_box_test/0a0a0b1a-7c39d841.jpg\")\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e52695b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': '0a0a0b1a-7c39d841', 'frames': [{'timestamp': 10000, 'objects': [{'category': 'car', 'id': 0, 'attributes': {'occluded': True, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 555.647397, 'y1': 304.228432, 'x2': 574.015906, 'y2': 316.474104}}, {'category': 'car', 'id': 1, 'attributes': {'occluded': True, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 554.116689, 'y1': 318.004813, 'x2': 567.89307, 'y2': 328.719775}}, {'category': 'car', 'id': 2, 'attributes': {'occluded': True, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 523.502507, 'y1': 311.881977, 'x2': 544.932435, 'y2': 327.189068}}, {'category': 'car', 'id': 3, 'attributes': {'occluded': True, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 492.888326, 'y1': 311.881977, 'x2': 526.563926, 'y2': 337.904031}}, {'category': 'truck', 'id': 4, 'attributes': {'occluded': True, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 393.392235, 'y1': 302.697723, 'x2': 453.089891, 'y2': 347.088286}}, {'category': 'car', 'id': 5, 'attributes': {'occluded': False, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 169.143354, 'y1': 301.167013, 'x2': 265.578024, 'y2': 359.333958}}, {'category': 'car', 'id': 6, 'attributes': {'occluded': False, 'truncated': False, 'trafficLightColor': 'none'}, 'box2d': {'x1': 561.00488, 'y1': 281.267794, 'x2': 677.33877, 'y2': 386.886721}}, {'category': 'area/drivable', 'id': 7, 'attributes': {}, 'poly2d': [[344.484243, 615.550512, 'L'], [505.772584, 398.282958, 'L'], [691.948279, 389.399351, 'L'], [1121.785254, 608.062064, 'L'], [879.159504, 584.099027, 'C'], [603.58458, 578.108268, 'C'], [344.484243, 615.550512, 'C']]}, {'category': 'area/alternative', 'id': 8, 'attributes': {}, 'poly2d': [[1165.218261, 611.057444, 'L'], [691.948279, 378.915523, 'L'], [688.952898, 347.464038, 'L'], [1280.524792, 488.246879, 'L'], [1280.524792, 620.043584, 'L'], [1165.218261, 611.057444, 'L']]}, {'category': 'area/alternative', 'id': 9, 'attributes': {}, 'poly2d': [[530.197779, 350.459416, 'L'], [289.069718, 623.038962, 'L'], [0, 666.471967, 'L'], [0, 480.75843, 'L'], [488.262464, 342.970966, 'L'], [530.197779, 350.459416, 'L']]}, {'category': 'area/alternative', 'id': 10, 'attributes': {}, 'poly2d': [[413.377974, 356.450177, 'L'], [0, 470.2746, 'L'], [0, 410.367008, 'L'], [387.917247, 348.961727, 'L'], [413.377974, 356.450177, 'L']]}, {'category': 'area/alternative', 'id': 11, 'attributes': {}, 'poly2d': [[190.222191, 371.427075, 'L'], [0, 402.87856, 'L'], [0, 377.417834, 'L'], [157.273015, 359.445555, 'L'], [190.222191, 371.427075, 'L']]}, {'category': 'lane/single white', 'id': 12, 'attributes': {'direction': 'parallel', 'style': 'dashed'}, 'poly2d': [[492.879546, 331.939543, 'L'], [0, 471.076658, 'L']]}, {'category': 'lane/single white', 'id': 13, 'attributes': {'direction': 'parallel', 'style': 'dashed'}, 'poly2d': [[495.819072, 337.818576, 'L'], [0, 478.915368, 'L']]}, {'category': 'lane/single white', 'id': 14, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[172.471289, 359.37503, 'L'], [0, 378.971807, 'L']]}, {'category': 'lane/single white', 'id': 15, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[394.89537, 341.737931, 'L'], [0, 403.467778, 'L']]}, {'category': 'lane/single white', 'id': 16, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[398.814737, 344.677448, 'L'], [0, 408.366972, 'L']]}, {'category': 'lane/single white', 'id': 17, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[673.170431, 376.032291, 'L'], [1133.696062, 612.17345, 'L']]}, {'category': 'lane/single white', 'id': 18, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[677.089798, 372.112935, 'L'], [1163.091315, 611.193611, 'L']]}, {'category': 'lane/single white', 'id': 19, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[556.569261, 320.181477, 'C'], [468.383502, 423.064555, 'C'], [375.278274, 524.213777, 'C'], [285.153092, 625.891194, 'L']]}, {'category': 'lane/single white', 'id': 20, 'attributes': {'direction': 'parallel', 'style': 'solid'}, 'poly2d': [[558.528944, 325.080671, 'L'], [343.943598, 617.072644, 'L']]}]}], 'attributes': {'weather': 'clear', 'scene': 'highway', 'timeofday': 'daytime'}}\n"
      ]
     }
    ],
    "source": [
-    "from ultralytics import YOLO"
+    "with open(\"detecton_box_test/0a0a0b1a-7c39d841.json\", \"r\") as f:\n",
+    "    gt_data = json.load(f)\n",
+    "\n",
+    "print(gt_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c268e768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_xyxy = np.array([obj.get('box2d', {0, 0, 0, 0}) for obj in gt_data['frames'][0]['objects']])   # shape: (G, 4)\n",
+    "gt_classes = [obj[\"category\"] for obj in gt_data['frames'][0]['objects']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "169ca625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 7 ground truth boxes.\n",
+      "Found 7 ground truth classes.\n",
+      "['car', 'car', 'car', 'car', 'truck', 'car', 'car']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "gt_boxes_list = []\n",
+    "gt_classes_list = []\n",
+    "for obj in gt_data['frames'][0]['objects']:\n",
+    "    if 'box2d' in obj:\n",
+    "        box = obj['box2d']\n",
+    "        gt_boxes_list.append([box['x1'], box['y1'], box['x2'], box['y2']])\n",
+    "        gt_classes_list.append(obj[\"category\"])\n",
+    "\n",
+    "gt_xyxy = np.array(gt_boxes_list, dtype=int)\n",
+    "gt_classes = gt_classes_list\n",
+    "\n",
+    "print(f\"Found {len(gt_xyxy)} ground truth boxes.\")\n",
+    "print(f\"Found {len(gt_classes)} ground truth classes.\")\n",
+    "print(gt_classes)\n",
+    "\n",
+    "class_to_id = {\n",
+    "    \"car\": 0, \n",
+    "    \"truck\": 1,\n",
+    "    \"traffic light\": 2,\n",
+    "    \"traffic sign\": 3,\n",
+    "    \"person\": 4,\n",
+    "    \"drivable area\": 5, # Note: YOLO might not detect this category\n",
+    "    \"lane\": 6           # Note: YOLO might not detect this category\n",
+    "} \n",
+    "gt_cls = np.array([class_to_id[c] for c in gt_classes if c in class_to_id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "2baced67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = results[0]\n",
+    "\n",
+    "pred_xyxy = pred.boxes.xyxy.cpu().numpy()\n",
+    "pred_cls = pred.boxes.cls.cpu().numpy().astype(int)\n",
+    "pred_conf = pred.boxes.conf.cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5ae298df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iou(boxA, boxB):\n",
+    "    # box: [x1, y1, x2, y2]\n",
+    "    xA = max(boxA[0], boxB[0])\n",
+    "    yA = max(boxA[1], boxB[1])\n",
+    "    xB = min(boxA[2], boxB[2])\n",
+    "    yB = min(boxA[3], boxB[3])\n",
+    "\n",
+    "    interArea = max(0, xB - xA) * max(0, yB - yA)\n",
+    "    boxAArea = (boxA[2] - boxA[0]) * (boxA[3] - boxA[1])\n",
+    "    boxBArea = (boxB[2] - boxB[0]) * (boxB[3] - boxB[1])\n",
+    "\n",
+    "    if boxAArea == 0 or boxBArea == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    return interArea / float(boxAArea + boxBArea - interArea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "571463b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_gt = set()\n",
+    "tp = 0\n",
+    "fp = 0\n",
+    "\n",
+    "for i, pbox in enumerate(pred_xyxy):\n",
+    "    pcls = pred_cls[i]\n",
+    "\n",
+    "    best_iou = 0\n",
+    "    best_gt = -1\n",
+    "\n",
+    "    for j, gbox in enumerate(gt_xyxy):\n",
+    "        if gt_cls[j] != pcls:\n",
+    "            continue\n",
+    "        current_iou = iou(pbox, gbox)\n",
+    "        if current_iou > best_iou:\n",
+    "            best_iou = current_iou\n",
+    "            best_gt = j\n",
+    "\n",
+    "    if best_iou >= 0.5:\n",
+    "        if best_gt not in matched_gt:   # avoid double match\n",
+    "            tp += 1\n",
+    "            matched_gt.add(best_gt)\n",
+    "        else:\n",
+    "            fp += 1\n",
+    "    else:\n",
+    "        fp += 1\n",
+    "\n",
+    "fn = len(gt_xyxy) - len(matched_gt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8b3d5704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision = tp / (tp + fp + 1e-9)\n",
+    "recall = tp / (tp + fn + 1e-9)\n",
+    "f1 = 2 * precision * recall / (precision + recall + 1e-9)\n",
+    "accuracy = tp / (tp + fp + fn + 1e-9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bf83d69f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(precision)\n",
+    "print(recall)"
    ]
   }
  ],
