--- a/dataset-eda.ipynb
+++ b/dataset-eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f88426fb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "0c011dd9",
    "metadata": {},
    "outputs": [
@@ -22,9 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entering folder: ../../data/100k labels/test\n",
-      "Entering folder: ../../data/100k labels/train\n",
-      "Entering folder: ../../data/100k labels/val\n",
+      "Entering folder: data/bdd_labels/test\n",
+      "Entering folder: data/bdd_labels/train\n",
+      "Entering folder: data/bdd_labels/val\n",
       "                name                                             frames  \\\n",
       "0  d64053ce-a2cc534f  [{'timestamp': 10000, 'objects': [{'category':...   \n",
       "1  d4d26c50-ec0318e6  [{'timestamp': 10000, 'objects': [{'category':...   \n",
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "PATH_DIR = \"../../data/100k labels\"\n",
+    "PATH_DIR = \"data/bdd_labels\"\n",
     "\n",
     "all_data = []\n",
     "for folder_name in os.listdir(PATH_DIR):\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "2d09db65",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "300000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "358d6452",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "     [121.032143, 563.984827, 'L']]}]}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "8be55791",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "58be5e28",
    "metadata": {},
    "outputs": [
@@ -504,12 +504,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'traffic sign': 343882, 'traffic light': 266032, 'car': 1021811, 'area/drivable': 91625, 'lane/single white': 353334, 'lane/crosswalk': 154228, 'lane/road curb': 157406, 'person': 129350, 'area/alternative': 88379, 'truck': 42963, 'bus': 16502, 'lane/single other': 394, 'rider': 6465, 'bike': 10232, 'lane/double yellow': 53449, 'lane/double white': 8206, 'lane/single yellow': 28962, 'motor': 4295, 'train': 179, 'lane/double other': 37, 'area/unknown': 2}\n"
+      "{'traffic sign': 343882, 'traffic light': 266032, 'car': 1021811, 'area/drivable': 91625, 'lane/single white': 353334, 'lane/crosswalk': 154228, 'lane/road curb': 157406, 'person': 129350, 'area/alternative': 88379, 'truck': 42963, 'bus': 16502, 'lane/single other': 394, 'rider': 6465, 'bike': 10232, 'lane/double yellow': 53449, 'lane/double white': 8206, 'lane/single yellow': 28962, 'motor': 4295, 'train': 179, 'lane/double other': 37, 'area/unknown': 2}\n",
+      "21\n"
      ]
     }
    ],
    "source": [
-    "print(categories)"
+    "print(categories)\n",
+    "print(len(categories))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b205a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (639453818.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m// ...existing code...\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "PATH_DIR = \"/Users/beaulin/DS 340 Project/Analysis/road_object_detec/data/bdd_labels/val\"\n",
+    "\n",
+    "all_data = []\n",
+    "# Check if the new path exists and is a directory\n",
+    "if os.path.isdir(PATH_DIR):\n",
+    "    print(f\"Entering folder: {PATH_DIR}\")\n",
+    "        \n",
+    "    # Iterate directly through the files in the specified PATH_DIR\n",
+    "    for file_name in os.listdir(PATH_DIR):\n",
+    "            \n",
+    "        # Check if the file is a JSON file\n",
+    "        if file_name.endswith('.json'):\n",
+    "            json_path = os.path.join(PATH_DIR, file_name)\n",
+    "                \n",
+    "            with open(json_path, 'r') as f:\n",
+    "                data = json.load(f)\n",
+    "                all_data.append(data)\n",
+    "\n",
+    "df = pd.DataFrame(all_data)\n",
+    "print(df.head())\n",
+    "</VSCode.Cell>PATH_DIR = \"/Users/beaulin/DS 340 Project/Analysis/road_object_detec/data/bdd_labels/val\"\n",
+    "\n",
+    "all_data = []\n",
+    "if os.path.isdir(folder_path):\n",
+    "    print(f\"Entering folder: {folder_path}\")\n",
+    "        \n",
+    "    for file_name in os.listdir(folder_path):\n",
+    "            \n",
+    "        # Check if the file is a JSON file\n",
+    "        if file_name.endswith('.json'):\n",
+    "            json_path = os.path.join(folder_path, file_name)\n",
+    "                \n",
+    "            with open(json_path, 'r') as f:\n",
+    "                data = json.load(f)\n",
+    "                all_data.append(data)\n",
+    "\n",
+    "df = pd.DataFrame(all_data)\n",
+    "print(df.head())"
    ]
   }
  ],
