Final commit: including all train runs, updated README

--- a/dataset-eda.ipynb
+++ b/dataset-eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "f88426fb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0c011dd9",
    "metadata": {},
    "outputs": [
@@ -22,27 +22,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entering folder: data/bdd_labels/test\n",
-      "Entering folder: data/bdd_labels/train\n",
-      "Entering folder: data/bdd_labels/val\n",
-      "                name                                             frames  \\\n",
-      "0  d64053ce-a2cc534f  [{'timestamp': 10000, 'objects': [{'category':...   \n",
-      "1  d4d26c50-ec0318e6  [{'timestamp': 10000, 'objects': [{'category':...   \n",
-      "2  d2e2474e-e8ba1eb7  [{'timestamp': 10000, 'objects': [{'category':...   \n",
-      "3  eacaf443-df8c70b8  [{'timestamp': 10000, 'objects': [{'category':...   \n",
-      "4  f9e0e143-6f328c06  [{'timestamp': 10000, 'objects': [{'category':...   \n",
-      "\n",
-      "                                          attributes  \n",
-      "0  {'weather': 'snowy', 'scene': 'city street', '...  \n",
-      "1  {'weather': 'clear', 'scene': 'city street', '...  \n",
-      "2  {'weather': 'clear', 'scene': 'residential', '...  \n",
-      "3  {'weather': 'partly cloudy', 'scene': 'city st...  \n",
-      "4  {'weather': 'overcast', 'scene': 'highway', 't...  \n"
+      "Entering folder: bdd10k/labels/train\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Extra data: line 1 column 3 (char 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m                 json_path = os.path.join(folder_path, file_name)\n\u001b[32m     16\u001b[39m                 \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(json_path, \u001b[33m'\u001b[39m\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m                     data = \u001b[43mjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m                     all_data.append(data)\n\u001b[32m     20\u001b[39m df = pd.DataFrame(all_data)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/json/__init__.py:293\u001b[39m, in \u001b[36mload\u001b[39m\u001b[34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    274\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload\u001b[39m(fp, *, \u001b[38;5;28mcls\u001b[39m=\u001b[38;5;28;01mNone\u001b[39;00m, object_hook=\u001b[38;5;28;01mNone\u001b[39;00m, parse_float=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    275\u001b[39m         parse_int=\u001b[38;5;28;01mNone\u001b[39;00m, parse_constant=\u001b[38;5;28;01mNone\u001b[39;00m, object_pairs_hook=\u001b[38;5;28;01mNone\u001b[39;00m, **kw):\n\u001b[32m    276\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Deserialize ``fp`` (a ``.read()``-supporting file-like object containing\u001b[39;00m\n\u001b[32m    277\u001b[39m \u001b[33;03m    a JSON document) to a Python object.\u001b[39;00m\n\u001b[32m    278\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    291\u001b[39m \u001b[33;03m    kwarg; otherwise ``JSONDecoder`` is used.\u001b[39;00m\n\u001b[32m    292\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m293\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    294\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobject_hook\u001b[49m\u001b[43m=\u001b[49m\u001b[43mobject_hook\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    295\u001b[39m \u001b[43m        \u001b[49m\u001b[43mparse_float\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparse_float\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparse_int\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparse_int\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    296\u001b[39m \u001b[43m        \u001b[49m\u001b[43mparse_constant\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparse_constant\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobject_pairs_hook\u001b[49m\u001b[43m=\u001b[49m\u001b[43mobject_pairs_hook\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkw\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/json/__init__.py:346\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    341\u001b[39m     s = s.decode(detect_encoding(s), \u001b[33m'\u001b[39m\u001b[33msurrogatepass\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    348\u001b[39m     \u001b[38;5;28mcls\u001b[39m = JSONDecoder\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/json/decoder.py:340\u001b[39m, in \u001b[36mJSONDecoder.decode\u001b[39m\u001b[34m(self, s, _w)\u001b[39m\n\u001b[32m    338\u001b[39m end = _w(s, end).end()\n\u001b[32m    339\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m end != \u001b[38;5;28mlen\u001b[39m(s):\n\u001b[32m--> \u001b[39m\u001b[32m340\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[33m\"\u001b[39m\u001b[33mExtra data\u001b[39m\u001b[33m\"\u001b[39m, s, end)\n\u001b[32m    341\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
+      "\u001b[31mJSONDecodeError\u001b[39m: Extra data: line 1 column 3 (char 2)"
      ]
     }
    ],
    "source": [
-    "PATH_DIR = \"data/bdd_labels\"\n",
+    "PATH_DIR = \"data/labels\"\n",
     "\n",
     "all_data = []\n",
     "for folder_name in os.listdir(PATH_DIR):\n",
@@ -54,7 +53,7 @@
     "        for file_name in os.listdir(folder_path):\n",
     "            \n",
     "            # Check if the file is a JSON file\n",
-    "            if file_name.endswith('.json'):\n",
+    "            if file_name.endswith('.j'):\n",
     "                json_path = os.path.join(folder_path, file_name)\n",
     "                \n",
     "                with open(json_path, 'r') as f:\n",
@@ -516,22 +515,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
    "execution_count": 3,
->>>>>>> 1d492c9 (Clean commit with correct .gitignore)
    "id": "4b205a80",
    "metadata": {},
    "outputs": [
     {
-<<<<<<< HEAD
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (639453818.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m// ...existing code...\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-=======
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -549,15 +537,10 @@
       "2  {'weather': 'clear', 'scene': 'city street', '...  \n",
       "3  {'weather': 'clear', 'scene': 'city street', '...  \n",
       "4  {'weather': 'clear', 'scene': 'highway', 'time...  \n"
->>>>>>> 1d492c9 (Clean commit with correct .gitignore)
      ]
     }
    ],
    "source": [
-<<<<<<< HEAD
-    "\n",
-=======
->>>>>>> 1d492c9 (Clean commit with correct .gitignore)
     "PATH_DIR = \"/Users/beaulin/DS 340 Project/Analysis/road_object_detec/data/bdd_labels/val\"\n",
     "\n",
     "all_data = []\n",
@@ -577,27 +560,6 @@
     "                all_data.append(data)\n",
     "\n",
     "df = pd.DataFrame(all_data)\n",
-<<<<<<< HEAD
-    "print(df.head())\n",
-    "</VSCode.Cell>PATH_DIR = \"/Users/beaulin/DS 340 Project/Analysis/road_object_detec/data/bdd_labels/val\"\n",
-    "\n",
-    "all_data = []\n",
-    "if os.path.isdir(folder_path):\n",
-    "    print(f\"Entering folder: {folder_path}\")\n",
-    "        \n",
-    "    for file_name in os.listdir(folder_path):\n",
-    "            \n",
-    "        # Check if the file is a JSON file\n",
-    "        if file_name.endswith('.json'):\n",
-    "            json_path = os.path.join(folder_path, file_name)\n",
-    "                \n",
-    "            with open(json_path, 'r') as f:\n",
-    "                data = json.load(f)\n",
-    "                all_data.append(data)\n",
-    "\n",
-    "df = pd.DataFrame(all_data)\n",
-    "print(df.head())"
-=======
     "print(df.head())"
    ]
   },
@@ -617,7 +579,6 @@
    ],
    "source": [
     "print(len(df))"
->>>>>>> 1d492c9 (Clean commit with correct .gitignore)
    ]
   }
  ],
